reworked + added images

--- a/Main_Folder/MY_PROJECTS/rock_paper_scissors/index.html
+++ b/Main_Folder/MY_PROJECTS/rock_paper_scissors/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" onload="handleFullWidthSizing()">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,13 @@
   <link rel="stylesheet" href="styles.css">
   <title>Play Rock,Paper,Scissors</title>
 </head>
+
 <body>
   <h1>Come play the Game</h1>
   <section id="main-section">
     <section id="game-row">
-      <img id="user-img" style="border:solid black" src="https://images.unsplash.com/photo-1481349518771-20055b2a7b24?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8cmFuZG9tfGVufDB8fDB8fA%3D%3D&w=1000&q=80"/>
+      <img id="user-img" style="border:solid black"
+        src="./images/rps1.jpg" />
 
       <div id="buttons">
         <button id="choose-random" onclick="randomChoice()">Random Selection</button>
@@ -24,10 +27,12 @@
         <div id="results">
         </div>
       </div>
-      <img  id="cpu-img" style="border:solid black" src="https://substackcdn.com/image/fetch/f_auto,q_auto:good,fl_progressive:steep/https%3A%2F%2Fbucketeer-e05bbc84-baa3-437e-9518-adb32be77984.s3.amazonaws.com%2Fpublic%2Fimages%2F3bdb2575-9a92-42f8-8472-bb78c7bd118a_720x405.jpeg"/>
+      <img id="cpu-img" style="border:solid black"
+        src="./images/rps2.jpg" />
     </section>
   </section>
 
   <script src="index.js"></script>
 </body>
+
 </html>
