--- a/Main_Folder/MY_PROJECTS/rock_paper_scissors/index.html
+++ b/Main_Folder/MY_PROJECTS/rock_paper_scissors/index.html
@@ -13,7 +13,7 @@
   <h1>Come play the Game</h1>
   <section id="main-section">
     <section id="game-row">
-      <img id="user-img" style="border:solid black"
+      <img id="user-img" class="img"
         src="./images/rps1.jpg" />
 
       <div id="buttons">
@@ -27,7 +27,7 @@
         <div id="results">
         </div>
       </div>
-      <img id="cpu-img" style="border:solid black"
+      <img id="cpu-img" class="img"
         src="./images/rps2.jpg" />
     </section>
   </section>
